--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@ html{
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+	margin: 0px;
+	margin-bottom: 0px;
+}
+
 .background{
 	background: #EEEEEE;
 	height: 750px;
 	width: 100%;
-	max-width: 1864px;
+	max-width: 1920px;
 	min-width: 375px;
 }
 
@@ -17,11 +22,10 @@ html{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 	width: 100%;
-	margin-right: 50px;
 }
 
 .menu a{
-	float: left;
+	float: right;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -126,6 +130,16 @@ footer{
 	text-decoration: none;
 }
 
+@media only screen and (max-width: 1300px) {
+	.par{
+		margin-left: 100px;
+	}
+
+	button{
+		margin-left: 100px;
+	}
+}
+
  @media only screen and (max-width: 768px) {
   .par {
     margin-left: 30px;
@@ -133,10 +147,31 @@ footer{
   button {
   	margin-left: 30px;
   }
+
   .menu{
-  	justify-content: center;
-  	width: 320px;
+  	justify-content: space-around;
   }
+
+  .navBottom {
+  	justify-content: space-around;
+  }
+
+  .portfolio {
+  	padding: 10px;
+  }
+  .column {
+  	padding: 20px;
+  }
+  .images{
+  	height: 250px;
+  }
+  .images2{
+  	height: 250px;
+  }
+  .images3{
+  	height: 250px;
+  }
+
 
 @media only screen and (max-width: 375px) {
   .par {
